<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/plainTextNombreApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombreYApellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password_confirmar_contrasenia"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/confirmar_contrasenia"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo_tarjeta" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_debito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/debito" />

        <RadioButton
            android:id="@+id/radioButton_credito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/credito" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/number_numero_tarjeta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:hint="@string/num_tarjeta"
            android:inputType="number" />

        <EditText
            android:id="@+id/number_CCV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:hint="@string/ccv"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_fechaVencimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_vencimiento" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/number_mes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:hint="@string/mes"
            android:inputType="number" />

        <EditText
            android:id="@+id/number_anio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:hint="@string/anio"
            android:inputType="number" />
    </LinearLayout>

    <EditText
        android:id="@+id/plainText_CBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cbu"
        android:inputType="number" />

    <EditText
        android:id="@+id/plainText_AliasCBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/alias_cbu"
        android:inputType="number" />

    <Switch
        android:id="@+id/switchCargaInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realizar_cargaInicial" />

    <TextView
        android:id="@+id/textView_ValorCargaInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carga_inicial"
        android:visibility="gone"/>

    <SeekBar
        android:id="@+id/seekBar_CreditoInicial"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:max="1500"
        android:progress="1"
        android:progressTint="#FFFFFF"
        android:text="@string/credito"
        android:textAlignment="center"
        android:textDirection="firstStrongRtl"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkBox_TerminosYCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acepto_TYC" />

    <Button
        android:id="@+id/button_Registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />

</LinearLayout>
